--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "fs": "0.0.1-security",
+    "ipfs-http-client": "^37.0.1",
     "jquery": "^3.4.0",
     "jsdom": "^14.0.0",
     "mongodb": "^3.2.3",
