Implement write on IPFS

--- a/config.json
+++ b/config.json
@@ -38,5 +38,9 @@
     "ip": "localhost",
     "port": 27017,
     "version": "v4.0.9"
+  },
+  "IPFS": {
+    "ip": "132.199.123.57",
+    "port": 5001
   }
 }
